# daizo-mcp

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md  README.zh-TW.md  daizo-mcp.sh
daizo-cli/: Cargo.toml  build.rs
daizo-cli/src/: main.rs  regex_utils.rs
daizo-cli/src/cmd/: cbeta.rs  gretil.rs  mod.rs  muktabodha.rs  sarit.rs  sat.rs  tipitaka.rs
daizo-core/: Cargo.toml
daizo-core/src/: lib.rs  lib_line_extraction.rs  path_resolver.rs  repo.rs  text_utils.rs
daizo-mcp/: Cargo.toml
daizo-mcp/src/: main.rs
docs/: ARCHITECTURE.md  mcp-connector.md  mcp-references.md
docs/mcp/: mcp-http.html  mcp-introduction.html  mcp-logging.html  mcp-prompts.html  mcp-resources.html  mcp-stdio.html  mcp-tools.html  mcp-transports-overview.html
scripts/: bootstrap.sh  install.sh  link-binaries.sh
