[package]
name = "daizo-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
daizo-core = { path = "../daizo-core" }
anyhow = "1"
regex = "1"
unicode-normalization = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }
scraper = "0.19"
urlencoding = "2"
url = "=2.4.1"
idna = "=0.5.0"
sha1 = "0.10"
encoding_rs = "0.8"
quick-xml = "0.31"
