[package]
name = "daizo-cli"
version = "0.3.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
daizo-core = { path = "../daizo-core" }
anyhow = "1.0"
regex = "1.11"
unicode-normalization = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
scraper = "0.24"
urlencoding = "2.1"
url = "2.5"
idna = "1.0"
sha1 = "0.10"
encoding_rs = "0.8"
quick-xml = "0.38.3"
