[package]
name = "daizo-core"
version = "0.3.10"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
walkdir = "2.5"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.38.3"
unicode-normalization = "0.1"
encoding_rs = "0.8"
regex = "1.10"
tempfile = "3.10"
glob = "0.3"
# ripgrep crates for fast regex searching
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
