[package]
name = "daizo-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
sha1 = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }
scraper = "0.19"
daizo-core = { path = "../daizo-core" }
unicode-normalization = "0.1"
urlencoding = "2"
url = "=2.4.1"
idna = "=0.5.0"
quick-xml = "0.31"
encoding_rs = "0.8"

## build.rs removed; initialization handled by CLI
