[package]
name = "daizo-mcp"
version = "4.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
ignore = "0.4"
sha1 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
scraper = "0.24"
daizo-core = { path = "../daizo-core" }
unicode-normalization = "0.1"
urlencoding = "2.1"
url = "2.5"
idna = "1.0"
quick-xml = "0.38.3"
encoding_rs = "0.8"

## build.rs removed; initialization handled by CLI
